@@ -1,3 +1,9 @@
+2003-07-20  Stephane Carrez  <stcarrez@nerim.fr>
+
+	* m68hc11-tdep.c (m68hc11_extract_return_value): Use regcache_raw_read
+	and translate to use regcache.
+	(m68hc11_gdbarch_init): Undeprecate extract_return_value.
+
 2003-07-18  Andrew Cagney  <cagney@redhat.com>
 
 	From 2003-07-04 Kei Sakamoto <sakamoto.kei@renesas.com>:
